# mlx-rl-dashboard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: train-and-deploy.yml
docs/: index.html
src/: train.py  train.py.back
src/docs/results/: latest_run.json
tests/: test_train.py
