[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-rl-dashboard"
version = "0.1.0"
description = "MLX Reinforcement Learning with GitHub Pages Dashboard"
authors = [{name = "MEA", email = "micasmac@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.9,<3.13"
dependencies = [
    "mlx",
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
extra = [
    "matplotlib",
    "gymnasium", 
    "plotly",
    "jinja2",
]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
